Fix spacing bug in recurWriteCON

--- a/AV/RecurTutor/recurWriteCON.css
+++ b/AV/RecurTutor/recurWriteCON.css
@@ -7,5 +7,5 @@
 }
 
 #recurWriteSumCON .jsavoutput.jsavline {
-  height: 30px;
+  height: 50px;
 }
